--- a/src/app/shared/components/simple-alert/simple-alert.component.html
+++ b/src/app/shared/components/simple-alert/simple-alert.component.html
@@ -2,7 +2,7 @@
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">×</span>
   </button>
-  <p>
+  <p style="word-wrap: break-word;">
     <strong>{{title}}</strong> {{message}}
   </p>
 </div>
