--- a/src/app/shared/components/simple-alert/simple-alert.component.html
+++ b/src/app/shared/components/simple-alert/simple-alert.component.html
@@ -1,5 +1,5 @@
 <div [class]="'alert alert-' + typeString" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="removeItem();">
     <span aria-hidden="true">×</span>
   </button>
   <p style="word-wrap: break-word;">
