--- a/src/app/platform/components/valuation-modal/valuation-modal.component.html
+++ b/src/app/platform/components/valuation-modal/valuation-modal.component.html
@@ -7,9 +7,9 @@
       <img class="d-flex rounded-circle mr-3" src="http://cdn.roomdi.com/wsimgresize/resize/crop/55/55/cdn.roomdi.com/contenidosShared/fotos/agregadorHotelero/fotos_hotelv4/1/355/7.jpg?f=1612252115"
         alt="">
       <div class="media-body">
-        <!-- <h6 class="hotelname">{{hotelInfo?.hotelName}}
-          <b2b-star [max]="5" [filled]="hotelInfo?.categoryCode"></b2b-star>
-        </h6> -->
+        <h6 class="hotelname">{{hotelInfo?.hotelName}}
+          <!-- <b2b-star [max]="5" [filled]="hotelInfo?.categoryCode"></b2b-star> -->
+        </h6>
         <p class="country">{{hotelInfo?.location?.city}}, {{hotelInfo?.location?.country}}</p>
         <p class="compo">From {{criteria.checkIn | dateFormat:environment.organization.dateFormat}} to {{criteria.checkOut | dateFormat:environment.organization.dateFormat}},
           {{roomsSearch?.roomsNum}}
