--- a/src/assets/css/travelgatex.css
+++ b/src/assets/css/travelgatex.css
@@ -1617,8 +1617,14 @@ pre {
     padding: 0.75rem;
     vertical-align: top;
     border-top: 1px solid #eceeef; }
-  .table tr:nth-child(even) td {
+  .table td.cancelImportAlert {
     border-top: 0px solid #eceeef;
+  }
+  .table td.cancelImportAlert:hover {
+    background-color: white;
+  }
+  .table td.cancelImportAlert div {
+    margin: 0px;
   }
   .table thead th {
     vertical-align: bottom;
