fix: Fixed minor issues

--- a/src/app/platform/pages/close-bookings/close-bookings.component.html
+++ b/src/app/platform/pages/close-bookings/close-bookings.component.html
@@ -38,7 +38,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <b2b-alert-dropdown *ngIf="!loading" [errors]="errors" [warnings]="warnings"></b2b-alert-dropdown>
+      <b2b-alert-dropdown [errors]="errors" [warnings]="warnings"></b2b-alert-dropdown>
     </div>
   </div>
   <div class="row">
