--- a/src/app/platform/components/hotel-option/hotel-option.component.html
+++ b/src/app/platform/components/hotel-option/hotel-option.component.html
@@ -64,7 +64,10 @@
               <td></td>
             </ng-template>
 
-            <td>{{option.rateRules | package}}</td>
+            <td *ngIf="option.rateRules; else checkRefundable">{{option.rateRules | package}}</td>
+            <ng-template #checkRefundable>
+              <td *ngIf="option?.cancelPolicy?.refundable === false">NRF</td>
+            </ng-template>
             <td>{{option.paymentType}}</td>
 
             <td>
@@ -78,7 +81,7 @@
               <div style="white-space: nowrap;" (click)="openBindingModal(option)" href="javascript:void(0)" *ngFor="let room of option.rooms">{{room.roomPrice.price.gross | number : '1.2-2'}} {{room.roomPrice.price.currency}}</div>
             </td>
             <td class="price">
-                <a (click)="openBindingModal(option.price)" href="javascript:void(0)">{{option.price.gross | number : '1.2-2'}} {{option.price.currency}}</a>
+              <a (click)="openBindingModal(option.price)" href="javascript:void(0)">{{option.price.gross | number : '1.2-2'}} {{option.price.currency}}</a>
             </td>
 
             <td align="right">
